# ancient-dna-ml

./: README.md
data/: .gitignore
scripts/: ancient_dna_metadata.csv  ancient_mtDNA_metadata.csv  features_to_csv.py  meta-ancient.py  meta-modern.py  modern_dna_download.py  modern_mtdna_metadata.csv  pyproject.toml  split-data.py
scripts/ancient-metadata/: amtdb_metadata.csv  combined_ancient_dna_metadata.csv  meta.py
scripts/training-metadata/: anc_train.csv
